--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="container-fluid" >
 
-            <div class=" row " data-aos="slide-up" data-aos-once='true' >
+            <div class=" row " data-aos="fade-up" data-aos-offset="50" data-aos-once='true' data-aos-easing="ease-in-out"  data-aos-duration="500">
                 <div class=" col-lg-6 d-flex flex-row justify-content-center">
                    
                     <img id="img-web-development" src="images/Saly-10.png" alt="web development">
@@ -72,7 +72,7 @@
                         My UI is mostly Minimal in design. </p>
                 </div>
             </div>
-            <div class=" row" data-aos="slide-up" data-aos-once='true' >
+            <div class=" row" data-aos="fade-up" data-aos-offset="50" data-aos-once='true' data-aos-easing="ease-in-out" data-aos-duration="500">
                 <div class=" col-lg-6 order-1 order-lg-2 d-flex flex-row justify-content-center">
                     <img id="img-reverse-engineer" src="images/Saly-1.png" alt="Reverse engineering">
                 </div>
@@ -99,6 +99,7 @@
 
 
     </section> -->
+    
     <section id="contact" class="text-center " data-aos="fade-in" data-aos-once='true' >
         <h1>contact</h1>
       <div class=" container-fluid" data-aos="fade-in" data-aos-once='true' >
@@ -114,7 +115,7 @@
                    <p>Mail:<a href="mailto:kdhanush894@gmail.com"> kdhanush894@gmail.com</a></p>
 
                </div>
-               <div class=" social-links d-flex flex-row justify-content-start " data-aos="slide-up" data-aos-once='true' >
+               <div class=" social-links d-flex flex-row justify-content-start " data-aos="fade-up" data-aos-offset="50" data-aos-once='true'  >
                 <a href="https://www.youtube.com/c/DhanushKumark"><i class="fab fa-youtube"></i></a>
                 <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
