--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="dhanush,dhanush kumar,dhanush youtube, dhanush developer, dhanush reverse engineering, Frontend Engineer,Dhanush Kumar K"
     />
-    <link rel="canonical" href="https://dhanushit.github.io/cv/" />
+    <!-- <link rel="canonical" href="https://dhanushit.github.io/cv/" /> -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media500.css" />
     <link rel="stylesheet" href="css/media900.css" />
