--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="dhanush,dhanush kumar,dhanush youtube, dhanush developer, dhanush reverse engineering, Frontend Engineer,Dhanush Kumar K"
     />
-    <!-- <link rel="canonical" href="https://dhanushit.github.io/cv/" /> -->
+    <link rel="canonical" href="https://dhanushcodev.github.io/cv/" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media500.css" />
     <link rel="stylesheet" href="css/media900.css" />
@@ -71,16 +71,16 @@
         </div>
 
         <div id="footer">
-          <a href="mailto:kdhanush894@gmail.com"
+          <a target="_blank" href="mailto:kdhanush894@gmail.com"
             ><ion-icon name="mail-outline"></ion-icon
           ></a>
-          <a href="https://www.instagram.com/k_dhanush_kumar/">
+          <a target="_blank" href="https://www.instagram.com/k_dhanush_kumar/">
             <ion-icon name="logo-instagram"></ion-icon>
           </a>
-          <a href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/">
+          <a target="_blank" href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/">
             <ion-icon name="logo-linkedin"></ion-icon
           ></a>
-          <a href="https://github.com/dhanushcodev"
+          <a target="_blank" href="https://github.com/dhanushcodev"
             ><ion-icon name="logo-github"></ion-icon
           ></a>
         </div>
@@ -100,56 +100,56 @@
               <h6 class="skill-card-text">Web</h6>
 
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/html5.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/html5.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>HTML</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/css.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/css.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>CSS</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/sass.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/sass.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Sass</h3>
                   <span>Basic</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/js.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/js.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Javascript</h3>
                   <span>Basic</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/reactjs.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/reactjs.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>React</h3>
                   <span>Basic</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/bootstrap5.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/bootstrap5.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Bootstrap</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/jquery.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/jquery.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Jquery</h3>
                   <span>Basic</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/nodejs.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/nodejs.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Nodejs</h3>
                   <span>Basic</span>
@@ -161,7 +161,7 @@
               <h6 class="skill-card-text">Other</h6>
 
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/figma.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/figma.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Figma</h3>
                   <span>Basic</span>
@@ -169,42 +169,42 @@
               </div>
 
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/java.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/java.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Java</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/python.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/python.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Python</h3>
                   <span>Basic</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/c++.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/c++.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>C/C++</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/flutter.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/flutter.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Flutter</h3>
                   <span>Basic</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/kotlin.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/kotlin.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Kotlin</h3>
                   <span>Basic</span>
                 </div>
               </div>
               <div class="skill animateup small">
-                <img class="skill-icon" src="assets/mysql.svg" alt="" />
+                <img loading="lazy" class="skill-icon" src="assets/mysql.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Mysql</h3>
                   <span>Basic</span>
@@ -223,7 +223,7 @@
                 <h3>Html, Css, Bootstrap, Javascript</h3>
               </div>
               <div class="project-card-middle">
-                <img src="assets/port1.png" alt="" />
+                <img loading="lazy" src="assets/port1.png" alt="" />
               </div>
               <div class="project-card-right">
                 <h2>Personal Portfolio <br />version 1</h2>
@@ -241,7 +241,7 @@
                 <h3>Html, Css, Javascript, jquery, aos</h3>
               </div>
               <div class="project-card-middle">
-                <img src="assets/port2.jpg" alt="" />
+                <img loading="lazy" src="assets/port2.jpg" alt="" />
               </div>
               <div class="project-card-right">
                 <h2>Personal Portfolio <br />version 2</h2>
@@ -254,7 +254,7 @@
                 <h3>Html, Css, Javascript</h3>
               </div>
               <div class="project-card-middle">
-                <img src="assets/cpen.png" alt="" />
+                <img loading="lazy" src="assets/cpen.png" alt="" />
               </div>
               <div class="project-card-right">
                 <h2>Online IDE <br />version 1</h2>
@@ -273,26 +273,26 @@
       <div id="bottom-bar">
         <h6 class="animateup small">Contact</h6>
         <div class="contact-card animateup">
-          <img class="animateup small" src="assets/contact.png" alt="🤝" />
+          <img loading="lazy" class="animateup small" src="assets/contact.png" alt="🤝" />
           <div class="contact-details">
             <div>
               <h1 class="animateup small">Dhanush Kumar k</h1>
               <p class="animateup small">
                 Mail:
-                <a href="mailto:kdhanush894@gmail.com">kdhanush894@gmail.com</a>
+                <a target="_blank" href="mailto:kdhanush894@gmail.com">kdhanush894@gmail.com</a>
               </p>
             </div>
             <div class="animateup small">
-              <a href="mailto:kdhanush894@gmail.com"
+              <a target="_blank" href="mailto:kdhanush894@gmail.com"
                 ><ion-icon name="mail-outline"></ion-icon
               ></a>
-              <a href="https://www.instagram.com/k_dhanush_kumar/">
+              <a target="_blank" href="https://www.instagram.com/k_dhanush_kumar/">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
-              <a href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/">
+              <a target="_blank" href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/">
                 <ion-icon name="logo-linkedin"></ion-icon
               ></a>
-              <a href="https://github.com/dhanushcodev"
+              <a target="_blank" href="https://github.com/dhanushcodev"
                 ><ion-icon name="logo-github"></ion-icon
               ></a>
             </div>
