added min files

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       content="dhanush,dhanush kumar,dhanush youtube, dhanush developer, dhanush reverse engineering, Frontend Engineer,Dhanush Kumar K"
     />
     <link rel="canonical" href="https://dhanushcodev.github.io/cv/" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/media500.css" />
-    <link rel="stylesheet" href="css/media900.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/media500.min.css" />
+    <link rel="stylesheet" href="css/media900.min.css" />
 
     <title>Dhanush portfolio v2</title>
   </head>
@@ -313,6 +313,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="index.js"></script>
+    <script src="index.min.js"></script>
   </body>
 </html>
