settimeout for animation

--- a/index.html
+++ b/index.html
@@ -99,56 +99,56 @@
             <div class="skill-left-card animateup">
               <h6 class="skill-card-text">Web</h6>
 
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/html5.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>HTML</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/css.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>CSS</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/sass.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Sass</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/js.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Javascript</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/reactjs.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>React</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/bootstrap5.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Bootstrap</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/jquery.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Jquery</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/nodejs.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Nodejs</h3>
@@ -160,7 +160,7 @@
             <div class="skill-right-card animateup">
               <h6 class="skill-card-text">Other</h6>
 
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/figma.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Figma</h3>
@@ -168,42 +168,42 @@
                 </div>
               </div>
 
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/java.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Java</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/python.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Python</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/c++.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>C/C++</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/flutter.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Flutter</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/kotlin.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Kotlin</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
+              <div class="skill animateup small">
                 <img loading="lazy" class="skill-icon" src="assets/mysql.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Mysql</h3>
