index content changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/media500.min.css" />
     <link rel="stylesheet" href="css/media900.min.css" />
 
-    <title>Dhanush portfolio v2</title>
+    <title>Dhanush portfolio</title>
   </head>
 
   <body id="body">
@@ -88,8 +88,8 @@
 
       <div id="projects">
         <p id="about-text" class="animateup">
-          Hello! 👋, my name is dhanush kumar k and I am a frontend engineer,
-          passionate about Websites, experimenting new things on the websites.
+          Hello! 👋, Iam Dhanush - Android Developer at TCS, Iam
+          passionate about Apps and Websites, currently experimenting new things on the websites.
         </p>
 
         <div id="skills-wrapper">
@@ -200,7 +200,7 @@
                 <img loading="lazy" class="skill-icon" src="assets/kotlin.svg" alt="" />
                 <div class="skill-inner-text">
                   <h3>Kotlin</h3>
-                  <span>Basic</span>
+                  <span>Intermediate</span>
                 </div>
               </div>
               <div class="skill animateup small">
