about text changed

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
       <div id="projects">
         <p id="about-text" class="animateup">
-          Hello! 👋, Iam Dhanush - Android Developer at TCS, Iam
-          passionate about Apps and Websites, currently experimenting new things on the websites.
+          Hello! 👋, Iam Dhanush passionate about Apps and Websites, currently experimenting new things on the websites.
         </p>
 
         <div id="skills-wrapper">
