added aos animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       content="dhanush,dhanush kumar,dhanush youtube, dhanush developer, dhanush reverse engineering, Frontend Engineer,Dhanush Kumar K"
     />
     <link rel="canonical" href="https://dhanushcodev.github.io/cv/" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.min.css" />
     <link rel="stylesheet" href="css/media500.min.css" />
     <link rel="stylesheet" href="css/media900.min.css" />
@@ -77,7 +78,10 @@
           <a target="_blank" href="https://www.instagram.com/k_dhanush_kumar/">
             <ion-icon name="logo-instagram"></ion-icon>
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/"
+          >
             <ion-icon name="logo-linkedin"></ion-icon
           ></a>
           <a target="_blank" href="https://github.com/dhanushcodev"
@@ -87,68 +91,198 @@
       </div>
 
       <div id="projects">
-        <p id="about-text" class="animateup">
-          Hello! 👋, Iam Dhanush passionate about Apps and Websites, currently experimenting new things on the websites.
+        <p
+          data-aos="animateup"
+          data-aos-delay="50"
+          data-aos-duration="1000"
+          data-aos-easing="ease"
+          data-aos-once="false"
+          id="about-text"
+          class=""
+        >
+          Hello! 👋, Iam Dhanush passionate about Apps and Websites, currently
+          experimenting new things on the websites.
         </p>
 
         <div id="skills-wrapper">
-          <h1 class="animateup">Skills I have</h1>
-          <p class="animateup">Here are the skills.</p>
+          <h1
+            data-aos="animateup"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-easing="ease"
+            data-aos-once="false"
+            class=""
+          >
+            Skills I have
+          </h1>
+          <p
+            data-aos="animateup"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-easing="ease"
+            data-aos-once="false"
+            class=""
+          >
+            Here are the skills.
+          </p>
           <div class="skills">
-            <div class="skill-left-card animateup">
+            <div
+              data-aos="animateup"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              data-aos-easing="ease"
+              data-aos-once="false"
+              class="skill-left-card"
+            >
               <h6 class="skill-card-text">Web</h6>
 
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/html5.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/html5.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>HTML</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/css.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/css.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>CSS</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/sass.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/sass.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Sass</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/js.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/js.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Javascript</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/reactjs.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/reactjs.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>React</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/bootstrap5.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/bootstrap5.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Bootstrap</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/jquery.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/jquery.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Jquery</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/nodejs.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/nodejs.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Nodejs</h3>
                   <span>Basic</span>
@@ -156,54 +290,145 @@
               </div>
             </div>
 
-            <div class="skill-right-card animateup">
+            <div
+              data-aos="animateup"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              data-aos-easing="ease"
+              data-aos-once="false"
+              class="skill-right-card"
+            >
               <h6 class="skill-card-text">Other</h6>
 
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/figma.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/figma.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Figma</h3>
                   <span>Basic</span>
                 </div>
               </div>
 
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/java.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/java.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Java</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/python.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/python.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Python</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/c++.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/c++.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>C/C++</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/flutter.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/flutter.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Flutter</h3>
                   <span>Basic</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/kotlin.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/kotlin.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Kotlin</h3>
                   <span>Intermediate</span>
                 </div>
               </div>
-              <div class="skill">
-                <img loading="lazy" class="skill-icon" src="assets/mysql.svg" alt="" />
+              <div
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class="skill"
+              >
+                <img
+                  loading="lazy"
+                  class="skill-icon"
+                  src="assets/mysql.svg"
+                  alt=""
+                />
                 <div class="skill-inner-text">
                   <h3>Mysql</h3>
                   <span>Basic</span>
@@ -214,10 +439,35 @@
         </div>
 
         <div id="project-content">
-          <h1 class="animateup">Project Works</h1>
-          <p class="animateup">Here are my Frontend projects.</p>
+          <h1
+            data-aos="animateup"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-easing="ease"
+            data-aos-once="false"
+            class=""
+          >
+            Project Works
+          </h1>
+          <p
+            data-aos="animateup"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-easing="ease"
+            data-aos-once="false"
+            class=""
+          >
+            Here are my Frontend projects.
+          </p>
           <div class="project-card-container">
-            <div class="project-card animateup">
+            <div
+              data-aos="animateup"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              data-aos-easing="ease"
+              data-aos-once="false"
+              class="project-card"
+            >
               <div class="project-card-left">
                 <h3>Html, Css, Bootstrap, Javascript</h3>
               </div>
@@ -235,7 +485,14 @@
               </div>
             </div>
 
-            <div class="project-card animateup">
+            <div
+              data-aos="animateup"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              data-aos-easing="ease"
+              data-aos-once="false"
+              class="project-card"
+            >
               <div class="project-card-left">
                 <h3>Html, Css, Javascript, jquery, aos</h3>
               </div>
@@ -248,7 +505,14 @@
               </div>
             </div>
 
-            <div class="project-card animateup">
+            <div
+              data-aos="animateup"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              data-aos-easing="ease"
+              data-aos-once="false"
+              class="project-card"
+            >
               <div class="project-card-left">
                 <h3>Html, Css, Javascript</h3>
               </div>
@@ -270,25 +534,72 @@
       </div>
 
       <div id="bottom-bar">
-        <h6 class="animateup small">Contact</h6>
-        <div class="contact-card animateup">
-          <img loading="lazy" class="animateup small" src="assets/contact.png" alt="🤝" />
+        <h6
+          data-aos="animateup"
+          data-aos-delay="50"
+          data-aos-duration="1000"
+          data-aos-easing="ease"
+          data-aos-once="false"
+          class=" "
+        >
+          Contact
+        </h6>
+        <div
+          data-aos="animateup"
+          data-aos-delay="50"
+          data-aos-duration="1000"
+          data-aos-easing="ease"
+          data-aos-once="false"
+          class="contact-card"
+        >
+          <img loading="lazy" class=" " src="assets/contact.png" alt="🤝" />
           <div class="contact-details">
             <div>
-              <h1 class="animateup small">Dhanush Kumar k</h1>
-              <p class="animateup small">
+              <h1
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class=" "
+              >
+                Dhanush Kumar k
+              </h1>
+              <p
+                data-aos="animateup-small"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease"
+                data-aos-once="false"
+                class=" "
+              >
                 Mail:
-                <a target="_blank" href="mailto:kdhanush894@gmail.com">kdhanush894@gmail.com</a>
+                <a target="_blank" href="mailto:kdhanush894@gmail.com"
+                  >kdhanush894@gmail.com</a
+                >
               </p>
             </div>
-            <div class="animateup small">
+            <div
+              data-aos="animateup-small"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              data-aos-easing="ease"
+              data-aos-once="false"
+              class=" "
+            >
               <a target="_blank" href="mailto:kdhanush894@gmail.com"
                 ><ion-icon name="mail-outline"></ion-icon
               ></a>
-              <a target="_blank" href="https://www.instagram.com/k_dhanush_kumar/">
+              <a
+                target="_blank"
+                href="https://www.instagram.com/k_dhanush_kumar/"
+              >
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
-              <a target="_blank" href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/dhanush-kumar-k-514471210/"
+              >
                 <ion-icon name="logo-linkedin"></ion-icon
               ></a>
               <a target="_blank" href="https://github.com/dhanushcodev"
@@ -303,6 +614,10 @@
         <p>© DHANUSH KUMAR K</p>
       </div>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script
       type="module"
